# example-package-sembahen

./: .gitignore  README.md  pyproject.toml
exercises/rectangles/: .coverage  end_to_end.sh  input.txt  new_output.txt  overlap_v0.py  sample_calc.py  test_nothing.py  test_sample_calc.py
src/example_package_SEMBAHEN/: rescale.py
tests/: test_rescale.py
